Replace requirements.txt with pipenv in Makefile.
Originally there was install_requirements.in and requirements.in which
then used pip-compile to generate install_requirements.txt and
requirements.txt

That was all deleted in
https://github.com/streamlit/streamlit/commit/b52bc73e046a8dd35856a096ee438cb30e79fad6#diff-0ef0eb202fb86cb8145a10b267cba8c9

Nothing was really pinned in the various *.in files, they're only pinned
in the *.txt files.  pipenv does the same thing but with less files.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "lib/requirements.txt" }}
+          - v1-dependencies-{{ checksum "lib/Pipfile" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
@@ -44,7 +44,7 @@ jobs:
       - save_cache:
           paths:
             - ./venv
-          key: v1-dependencies-{{ checksum "lib/requirements.txt" }}
+          key: v1-dependencies-{{ checksum "lib/Pipfile" }}
 
       # run tests including code coverage
       - run:
