Improve st.help() (#275)
* Improve st.help(). Add support for function signatures, better text rendering, and st.help(obj)

* Forgot to commit doc_string.py

* Add tests

* Make tests compatible with python2

* If no funcsigs module and not python3, don't provide function signatures.

* Require funcsigs

* Fix copyright year.

* Fix bug with st.help(st.line_chart)

* Use ImportError instead of ModuleNotFoundError for compatibility<Paste>

* Order DocString.js fields like in proto.

* Remove docstring in st.help() that said we convert ReST to MD.

--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -22,7 +22,7 @@ enum34==1.1.6             # via enum-compat, flake8
 flake8-docstrings==1.3.0
 flake8-polyfill==1.0.2    # via flake8-docstrings
 flake8==3.5.0
-funcsigs==1.0.2           # via pytest
+funcsigs==1.0.2
 future-fstrings==0.4.3
 future==0.16.0
 futures>=3.0.0
