Store nvm variables in environment.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
             source "$NVM_DIR/nvm.sh"
             nvm install --lts=dubnium
 
+            echo 'export NVM_DIR="$HOME/.nvm"' >> $BASH_ENV
+            echo 'source "$NVM_DIR/nvm.sh"' >> $BASH_ENV
+
       - run:
           name: create virtual envs
           command: |
