--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -29,7 +29,8 @@ future = "*"
 futures = {version="*", markers="python_version < '3.0'"}
 numpy = "*"
 pandas = "*"
-pillow = "*"
+# 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
+pillow = "!=5.1.0"
 protobuf = "*"
 psutil = "*"
 toml = "*"
