--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ workflows:
       - python-3.6.6
       - python-3.5.6
       - python-2.7.15
+      - miniconda3-4.5.12
 
 jobs:
   python-3.6.6: &job-template
@@ -171,3 +172,7 @@ jobs:
     <<: *job-template
     docker:
       - image: circleci/python:2.7.15-jessie
+  miniconda3-4.5.12:
+    <<: *job-template
+    docker:
+      - image: continuumio/miniconda3:4.5.12
