Create jobs/ site and create "secret" area  (#298)
* [site] Make menu be autogenerated from config.toml

* [site] Make footer date be the date of the site build.

* [site] Remove unused pages.

* [site] Simple lint.

* [site] Move docs/ to secret/docs/

* [site] Add jobs/ site

* [site] Implement two menus: main and secret

* [site] Move secret/foo to _foo

* [site] Fix "Contact" link in menu

* [site] Remove alias that used to map /docs/ to /_docs/

* [site] Remove deprecated "hideTopLinks" variable from jobs MD files

* Updated text

--- a/site/config.toml
+++ b/site/config.toml
@@ -5,3 +5,21 @@ MetaDataFormat = "yaml"
 Paginate = 20
 pygmentsUseClasses=true
 pygmentsCodeFences=true
+
+[menu]
+
+  [[menu.main]]
+  identifier = "jobs"
+  name = "We're hiring →"
+  url = "/jobs"
+
+  [[menu.secret]]
+  identifier = "_docs"
+  name = "Docs"
+  url = "/_docs"
+  weight = 10
+
+  [[menu.secret]]
+  name = "Contact"
+  url = "mailto:hello@streamlit.io"
+  weight = 100
